[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/BG/bg.jpg" type="Texture" id=2]
[ext_resource path="res://assets/botoes/bt_restart.png" type="Texture" id=3]
[ext_resource path="res://assets/botoes/bt_sair.png" type="Texture" id=4]
[ext_resource path="res://assets/fonte/nokiafc22.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 5 )

[node name="game_over" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="bg" type="Sprite" parent="CanvasLayer"]
position = Vector2( 170.768, 304.927 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="btn_restart" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 23.5151, 488.532 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 3 )

[node name="btn_menu" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 209.641, 487.096 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 4 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 48.9934
margin_top = 26.2187
margin_right = 376.994
margin_bottom = 279.219
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0666667, 0.160784, 0.360784, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "GAME
OVER"

[node name="last_score" type="Label" parent="CanvasLayer"]
margin_left = 26.3608
margin_top = 332.147
margin_right = 268.361
margin_bottom = 395.147
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Last: 0"
align = 1

[node name="best_score" type="Label" parent="CanvasLayer"]
margin_left = 46.1314
margin_top = 260.973
margin_right = 251.131
margin_bottom = 323.973
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Best: 0"
align = 1

[node name="music" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="CanvasLayer/btn_restart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/btn_menu" to="." method="_on_btn_menu_pressed"]
